undo composer z-index change (fixed by Vivaldi)

--- a/default.css
+++ b/default.css
@@ -104,12 +104,6 @@ a[component="header/profilelink"] i,
   vertical-align: unset !important;
 }
 
-/* Composer z-index fix for emoji-dialog */
-.composer.reply,
-.modal {
-  z-index: 9999 !important;
-}
-
 /* Alert margin on Unread page */
 #new-topics-alert {
   margin-top: 0 !important;
